<resources>
    <string name="app_name">Flashcard</string>
    <string name="app_name_menu">Flashcard Menu</string>
    <string name="home">ACCUEIL</string>
    <string name="add">AJOUTER UNE NOUVELLE CARTE</string>
    <string name="create">CREER UN NOUVEAU JEU DE CARTE</string>
    <string name="delete">SUPPRIMER UN JEU DE CARTE</string>
    <string name="jouer">JOUER UNE NOUVELLE PARTIE</string>
    <string name="question">Question:</string>
    <string name="reponse">Réponse</string>
    <string name="votre_reponse">Votre réponse</string>
    <string name="prio">Niveau de difficulté:</string>
    <string name="save">Enregistrer</string>
    <string name="creer">Créer</string>
    <string name="name">Nom du jeu:</string>
    <string name="saisie">Veuillez saisir le nom du jeu</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="deleted">Le jeu a bien été supprimé.</string>
    <string name="messageDelete">Etes vous sur de vouloir supprimer le jeu?</string>
    <string name="titleDelete">Suppimer jeu?</string>
    <string name="cancelDelete">La supression du jeu a été annulée.</string>
    <string-array name="difficulty">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <!--item>4</item>
        <item>5</item-->
    </string-array>
    <string name="difficulty_prompt">Default</string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Paramètres</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Veuillez choisir une méthode:</string>
    <string name="manual">MANUEL</string>
    <string name="link">AUTOMATIQUE (LIEN)</string>
    <string name="download">Télécharger</string>
    <string name="url">Url:</string>
    <string name="tempsReponse">Temps de réponse (en seconde):</string>
    <string name="dureeInac">Durée d\'inutilisation carte (en jour):</string>
    <string name="notifMessage">Il y a des cartes qui nécessitent votre attention (Inutilisées depuis un moment)</string>
    <string name="param">Veuillez modifier puis enregistrer les paramètres.</string>
    <string name="aftersave">Les paramètres ont bien été enregistrés.</string>
    <string name="tdr">tempsDeReponse</string>
    <string name="di">dureeInac</string>
    <string name="next">Suivant</string>
    <string name="changeDiff">Modifier la difficulté de la carte</string>
</resources>
