<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_create"
            android:icon="@drawable/ic_edit_black_24dp"
            android:title="@string/create" />
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/add" />
        <item
            android:id="@+id/nav_delete"
            android:icon="@drawable/ic_delete_black_24dp"
            android:title="@string/delete" />
        <item
            android:id="@+id/nav_jouer"
            android:icon="@drawable/ic_play_arrow_black_24dp"
            android:title="@string/jouer" />
    </group>

</menu>
