<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:orientation="vertical"
    android:isScrollContainer="true"
    tools:context="com.example.soul.flashcard.MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonCreate"
        android:text="@string/create"
        android:onClick="create"
        android:theme="@style/MyButton"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonAdd"
        android:text="@string/add"
        android:onClick="add"
        android:theme="@style/MyButton"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonDelete"
        android:text="@string/delete"
        android:onClick="delete"
        android:theme="@style/MyButton"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonJouer"
        android:text="JOUER UNE NOUVELLE PARTIE"
        android:onClick="jouer"
        android:theme="@style/MyButton"/>

</LinearLayout>
